corrects picture alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ hr {
 }
 
 .projectPicture {
-  padding-top: 10%;
+  margin-top: 14.5px;
   max-width: 100%;
 }
 
